# FaceDetRecog-Fast

./: README.md
faceDetectRecogTK1/: .gitignore  CMakeLists.txt  FACE.cpp  FACE.h  ReadME.txt  casia_db_list.txt  casia_list.txt  casia_test_list.txt  extract_feature.cpp  face_recog1.cpp  face_veri.cpp  global.h  lfw_db_list.txt  lfw_list.txt  lfw_test_list.txt
faceDetectRecogTK1/lib/: havon_ffd.c  havon_ffd_cascade.h  havon_ffd_test.cpp
face_detect_rpi/: .gitignore  CMakeLists.txt  FACE.cpp  FACE.h  README.md  havon_ffd.h  main.cpp
face_detect_rpi/lib/: havon_ffd.c  havon_ffd.h  readme.txt
liying_mtcnn-align/alignment_crop/: test_crop.cpp  test_img_crop.m
liying_mtcnn-align/detect/: face_detect.cpp  face_detect.h
